--- a/Virtual Tourist/View/Base.lproj/Main.storyboard
+++ b/Virtual Tourist/View/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JsC-Ei-I0p">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JsC-Ei-I0p">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -78,39 +78,34 @@
                                 </items>
                             </navigationBar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ID3-ge-8QG">
-                                <rect key="frame" x="0.0" y="208" width="414" height="480"/>
+                                <rect key="frame" x="0.0" y="208" width="414" height="294"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="labelColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="E4u-xR-V8w">
-                                    <size key="itemSize" width="113" height="105"/>
+                                    <size key="itemSize" width="125" height="140"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <scrollView key="backgroundView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="xGo-Vn-XZ5">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="480"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="294"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </scrollView>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="PhotoCell" reuseIdentifier="PhotoCell" id="AOD-ju-Og2" customClass="PhotoViewCell" customModule="Virtual_Tourist" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="123" height="115"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="125" height="140"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="123" height="115"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="125" height="140"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="j2c-nu-LXJ" customClass="Pho">
-                                                    <rect key="frame" x="0.0" y="0.0" width="123" height="115"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="j2c-nu-LXJ">
+                                                    <rect key="frame" x="0.0" y="0.0" width="143" height="140"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
                                         </view>
-                                        <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="j2c-nu-LXJ" secondAttribute="trailing" id="3yL-dV-yF1"/>
-                                            <constraint firstItem="j2c-nu-LXJ" firstAttribute="top" secondItem="AOD-ju-Og2" secondAttribute="top" id="9BJ-8P-AUW"/>
-                                            <constraint firstAttribute="bottom" secondItem="j2c-nu-LXJ" secondAttribute="bottom" id="sYR-CT-ztf"/>
-                                            <constraint firstItem="j2c-nu-LXJ" firstAttribute="leading" secondItem="AOD-ju-Og2" secondAttribute="leading" id="zDu-yZ-tpK"/>
-                                        </constraints>
-                                        <size key="customSize" width="123" height="115"/>
+                                        <size key="customSize" width="125" height="140"/>
                                         <connections>
                                             <outlet property="photoImageView" destination="j2c-nu-LXJ" id="VaT-2E-vQo"/>
                                         </connections>
@@ -118,7 +113,7 @@
                                 </cells>
                             </collectionView>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Wg1-yp-RkY">
-                                <rect key="frame" x="0.0" y="44" width="414" height="215"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="156"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </mapView>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="HgJ-AL-KsK">
@@ -126,7 +121,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </activityIndicatorView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qCN-Gh-Zbq" userLabel="New Collection Button">
-                                <rect key="frame" x="20" y="806" width="374" height="77"/>
+                                <rect key="frame" x="20" y="510" width="374" height="77"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" systemColor="systemBlueColor"/>
                                 <state key="normal" title="New Collection">
@@ -147,6 +142,7 @@
                         <outlet property="collectionView" destination="ID3-ge-8QG" id="zPm-qK-XQB"/>
                         <outlet property="deleteBtn" destination="Nid-bX-7u3" id="GY8-69-hGs"/>
                         <outlet property="doneBtn" destination="UbV-Z7-84o" id="ixZ-gp-Dkm"/>
+                        <outlet property="flowLayout" destination="E4u-xR-V8w" id="6A1-3D-WD2"/>
                         <outlet property="mapView" destination="Wg1-yp-RkY" id="FMM-gd-ftF"/>
                         <outlet property="navTitle" destination="wEr-Xo-f87" id="P4j-qR-4En"/>
                         <outlet property="newCollectionBtn" destination="qCN-Gh-Zbq" id="7vQ-Fe-VrO"/>
@@ -154,7 +150,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MXb-Uv-IpS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1016" y="54"/>
+            <point key="canvasLocation" x="1015.9420289855074" y="53.571428571428569"/>
         </scene>
     </scenes>
     <resources>
